--- a/.github/workflows/ca_handler_tests_xca.yml
+++ b/.github/workflows/ca_handler_tests_xca.yml
@@ -119,7 +119,7 @@ jobs:
         sudo openssl x509 -in lego/certificates/lego.acme.crt -text -ext extendedKeyUsage | grep "TLS Web Server Authentication, Code Signing"
 
     - name: "02a - Enroll acme with a template_name taken from header_info NOT included in kid.json (to fail)"
-      id: acmefail
+      id: acmefail01
       continue-on-error: true
       run: |
         sudo rm -rf acme-sh/*
@@ -127,9 +127,9 @@ jobs:
         docker run --rm -i -v "$(pwd)/acme-sh":/acme.sh --network acme --name=acme-sh neilpang/acme.sh:latest --issue --server http://acme-srv --useragent template_name=unknown -d acme-sh.acme --standalone --debug 3 --output-insecure
 
     - name: "02a - check  result "
-      if: steps.acmefail.outcome != 'failure'
+      if: steps.acmefail01.outcome != 'failure'
       run: |
-        echo "acmefail outcome is ${{steps.acmefail.outcome }}"
+        echo "acmefail outcome is ${{steps.acmefail01.outcome }}"
         exit 1
 
     - name: "02b - Enroll acme with a template_name taken from header_info included in kid.json"
@@ -144,16 +144,16 @@ jobs:
         openssl x509 -in acme-sh/acme-sh.acme_ecc/acme-sh.acme.cer -ext extendedKeyUsage -noout | grep "TLS Web Server Authentication, TLS Web Client Authentication"
 
     - name: "02a - Enroll lego with a template_name taken from header_info NOT included in kid.json (to fail)"
-      id: legofail
+      id: legofail01
       continue-on-error: true
       run: |
         sudo rm -rf lego/*
         docker run -i -v $PWD/lego:/.lego/ --rm --name lego --network acme goacme/lego -s http://acme-srv -a --email "lego@example.com" --eab --kid keyid_00 --hmac V2VfbmVlZF9hbm90aGVyX3ZlcnkfX2xvbmdfaG1hY190b19jaGVja19lYWJfZm9yX2tleWlkXzAwX2FzX2xlZ29fZW5mb3JjZXNfYW5faG1hY19sb25nZXJfdGhhbl8yNTZfYml0cw --user-agent template_name=unknown -d lego.acme --http run
 
     - name: "02a - check  result "
-      if: steps.legofail.outcome != 'failure'
+      if: steps.legofail01.outcome != 'failure'
       run: |
-        echo "legofail outcome is ${{steps.legofail.outcome }}"
+        echo "legofail outcome is ${{steps.legofail01.outcome }}"
         exit 1
 
     - name: "02b - Enroll lego with a template_name taken from header_info included in kid.json"
@@ -188,6 +188,33 @@ jobs:
         sudo openssl x509 -in lego/certificates/lego.acme.crt -text -noout
         sudo openssl x509 -in lego/certificates/lego.acme.crt -text -ext keyUsage | grep "Digital Signature, Non Repudiation"
         sudo openssl x509 -in lego/certificates/lego.acme.crt -text -ext extendedKeyUsage | grep "TLS Web Server Authentication, Code Signing"
+
+    - name: "04 - Enroll acme with a not allowd fqdn in kid.json (to fail)"
+      id: acmefail02
+      continue-on-error: true
+      run: |
+        sudo rm -rf acme-sh/*
+        docker run --rm -i -v "$(pwd)/acme-sh":/acme.sh --network acme --name=acme-sh neilpang/acme.sh:latest --register-account --server http://acme-srv --accountemail 'acme-sh@example.com' --eab-kid keyid_02 --eab-hmac-key dGhpc19pc19hX3ZlcnlfbG9uZ19obWFjX3RvX21ha2Vfc3VyZV90aGF0X2l0c19tb3JlX3RoYW5fMjU2X2JpdHM --debug 3
+        docker run --rm -i -v "$(pwd)/acme-sh":/acme.sh --network acme --name=acme-sh neilpang/acme.sh:latest --issue --server http://acme-srv  -d acme-sh.acme --standalone --debug 3 --output-insecure
+
+    - name: "04 - check  result "
+      if: steps.acmefail02.outcome != 'failure'
+      run: |
+        echo "acmefail outcome is ${{steps.acmefail02.outcome }}"
+        exit 1
+
+    - name: "04a - Enroll lego with a template_name taken from header_info NOT included in kid.json (to fail)"
+      id: legofail02
+      continue-on-error: true
+      run: |
+        sudo rm -rf lego/*
+        docker run -i -v $PWD/lego:/.lego/ --rm --name lego --network acme goacme/lego -s http://acme-srv -a --email "lego@example.com" --eab --kid keyid_02 --hmac dGhpc19pc19hX3ZlcnlfbG9uZ19obWFjX3RvX21ha2Vfc3VyZV90aGF0X2l0c19tb3JlX3RoYW5fMjU2X2JpdHM -d lego.acme --http run
+
+    - name: "04a - check  result "
+      if: steps.legofail02.outcome != 'failure'
+      run: |
+        echo "legofail outcome is ${{steps.legofail02.outcome }}"
+        exit 1
 
     - name: "[ * ] collecting test logs"
       if: ${{ failure() }}
